sacsvt21/data/creduce/creduce_t/482/kconfig/r3/cb3/2862.c-482-3.err
/project/alipour/rabin/kconfig/data/creduce_t/482/kconfig/r3/cb3/2862.c: In function ‘main’:
/project/alipour/rabin/kconfig/data/creduce_t/482/kconfig/r3/cb3/2862.c:680:1: error: unrecognizable insn:
 }
 ^
(insn 176 175 177 12 (set (reg:QI 450)
        (const_int 211 [0xd3])) /project/alipour/rabin/kconfig/data/creduce_t/482/kconfig/r3/cb3/2862.c:113 -1
     (nil))
/project/alipour/rabin/kconfig/data/creduce_t/482/kconfig/r3/cb3/2862.c:680:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
